<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PaymentMethodFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_paymentmethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/title_appbaer_register_payment_method"
        style="@style/AppToolbar"
        app:navigationIcon="@drawable/ic_left_arrow"
        />

    <TextView
        android:id="@+id/tv_label_card_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_paymentmethod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppTextTitle.S14"
        android:text="@string/label_card_num"/>

    <!-- setAutofilHints-->
    <!-- 텍스트뷰에서 제공하는 기능을 사용할 수 있음 -->
    <!-- inputType은 EditText와 함께 사용되어야 함-->

    <EditText
        android:id="@+id/et_input_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginTop="6dp"
        android:textColor="@color/gray700"
        android:textColorHint="@color/gray300"
        android:textSize="14sp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="11dp"
        android:nextFocusDown="@+id/et_expired_date"
        android:background="@drawable/selector_text_input_background"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_card_num"
        app:layout_constraintStart_toStartOf="@+id/tv_label_card_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_card_num" />
<!--android:nextFocusDown="@+id/et_expired_date" 다음 에디터를 지정하여 이동 -->
    <TextView
        android:id="@+id/tv_expired_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_input_card_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_label_pwd"
        style="@style/AppTextTitle.S14"
        android:text="@string/label_expired_date"
        />
    <EditText
        android:id="@+id/et_expired_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no"
        android:hint="@string/hint_expired_date"
        android:textSize="14sp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="11dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/selector_text_input_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_expired_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_input_password"/>

    <TextView
        android:id="@+id/tv_label_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:paddingBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintStart_toEndOf="@+id/tv_expired_date"
        app:layout_constraintTop_toTopOf="@+id/tv_expired_date"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppTextTitle.S14"/>
<!--app:layout_constraintTop_toTopOf="@+id/tv_expired_date" 간격 유지에 이게 사용되는게 좀 특이했음 -->
    <EditText
        android:id="@+id/et_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_password"
        android:inputType="numberPassword"
        android:importantForAutofill="no"
        android:textSize="14sp"
        android:paddingStart="14dp"
        android:layout_marginStart="15dp"
        android:paddingEnd="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="11dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/selector_text_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/et_expired_date"
        app:layout_constraintTop_toTopOf="@+id/et_expired_date" />
    
    <TextView
        android:id="@+id/tv_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_card_name"
        app:layout_constraintTop_toBottomOf="@+id/et_expired_date"
        style="@style/AppTextTitle.S14"/>

    <EditText
        android:id="@+id/et_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="6dp"
        android:importantForAutofill="no"
        android:hint="@string/hint_input_card_name"
        app:layout_constraintStart_toStartOf="@+id/tv_card_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_card_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_name"
        android:textSize="14sp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="11dp"
        android:background="@drawable/selector_text_input_background"
        />

    <Button
        android:id="@+id/btnSubmitCardInfo"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="확인"
        android:enabled="true"
        android:background="@drawable/selector_button_background"
        android:textColor="@drawable/selector_button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>