<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/title_appbar_home"
        app:titleTextAppearance="@style/AppTextTitle"
        tools:layout_editor_absoluteY="-7dp" />

    <View
        android:id="@+id/view_card_area"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_blue200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home" />

    <ImageView
        android:id="@+id/iv_add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_add_card"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toTopOf="@id/tv_add_card"
        app:layout_constraintEnd_toEndOf="@id/view_card_area"
        app:layout_constraintStart_toStartOf="@id/view_card_area"
        app:layout_constraintTop_toTopOf="@id/view_card_area"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_add_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        style="@style/AppTextPrimary"
        android:text="@string/text_transfer_check"
        android:textColor="@color/blue700"
        app:layout_constraintBottom_toBottomOf="@+id/view_card_area"
        app:layout_constraintEnd_toEndOf="@+id/view_card_area"
        app:layout_constraintStart_toStartOf="@+id/view_card_area"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_card" />


</androidx.constraintlayout.widget.ConstraintLayout>